211 ==> 430664 - How to access a database and files from another computer in LAN.
212 ==> 430684 - Renaming mp4 files - metadata fields have no values.
213 ==> 430589 - Want to disable face detection extra download on Mac version.
214 ==> 383096 - digiKam crash, maintenance related?
215 ==> 430762 - Change icon size for people keywords.
216 ==> 430337 - Failed to create a new people tag.
217 ==> 430250 - Provide filetype-based filter for running face detection.
218 ==> 423386 - Unconfirmed face detections treated as confirmed.
219 ==> 397229 - Facetags are not well displayed in the facetag list for one person.
220 ==> 430810 - Cannot found Slideshow settings dialog page.
221 ==> 376891 - Digikam becomes unusable with many Metatags.
222 ==> 417399 - Wishlist: button to hide confirmed faces for a person.
223 ==> 279667 - Face thumbnails from people tags does not support drag and drop.
224 ==> 430818 - In Batch Queue Manager, the "Run" command, execute always the first queue.
225 ==> 426860 - digiKam not entirely behaving as app on MacOS.
226 ==> 430903 - Do not enlarge smaller photos.
227 ==> 417088 - AppImage with QWebEngine does not start.
228 ==> 427533 - Appimage fails to launch.
229 ==> 424664 - digiKam 7.0 crash when opening geolocation tool.
230 ==> 424617 - The digiKam appimage crashes on starting.
231 ==> 430923 - EXIF viewer settings not updating EXIF Metadata view.
232 ==> 430876 - Rename images without changing any properties.
233 ==> 430995 - No video preview or thumbnails for any video content.
234 ==> 431013 - Not all databases will be saved when using the --database-directory option.
235 ==> 415617 - Color management profile path uses previous appimage mount point.
236 ==> 430986 - Setting up Eudora email app.
237 ==> 430949 - digiKam-7.2.0-beta2 (macOS (DMG)) breaks existing local MySQL/MariaDB instances on upgrade.
238 ==> 430985 - New beta release doesn´t start.
239 ==> 430996 - Yolo v3 causes application to crash with 32 bits version.
240 ==> 